--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "personal-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://kang-amy.github.io/",
+  "homepage": "http://amykang.ca/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
